Prevent h1 from overflowing horizontally

--- a/src/resources/postcss/tribe-common-admin/settings/_page.pcss
+++ b/src/resources/postcss/tribe-common-admin/settings/_page.pcss
@@ -43,8 +43,9 @@
 				font-family: var(--tec-font-family-arial);
 				font-size: var(--tec-font-size-7);
 				font-weight: var(--tec-font-weight-regular);
-				min-width: 100%;
+				max-width: 100%;
 				padding: var(--tec-spacer-2) var(--tec-spacer-5);
+				width: 100%;
 			}
 		}
 	}
